# hhSCNet

./: .gitignore  README.md  pyproject.toml
hhSCNet/: SCNet.py  __init__.py  apply.py  augment.py  commandLine.py  config.yaml  ema.py  inference.py  log.py  loss.py  purgatory.py  separation.py  solver.py  train.py  utils.py  wav.py
tests/: test_initialization.py  test_train.py
