[tool.poetry]
name = "hhSCNet"
version = "0.1.0"
description = "SCNet music separation, but easier to install and integrate."
authors = ["Hunter Hogan <HunterHogan@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
accelerate = "*"
# accelerate = ">=0.32.1"
einops = "*"
# einops = ">=0.6.1"
julius = "*"
# julius = ">=0.2.7"
ml_collections = ">=0.1.1"
numpy = ">=2.0.0"
python = ">=3.10"
ruamel-yaml = "*"
soundfile = "*"
# soundfile = ">=0.12.1"
torch = ">=2.0.0"
torchaudio = ">=2.0.0"
tqdm = "*"

[tool.poetry.scripts]
hhSCNet = "hhSCNet:main"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
