[project]
name = "hhSCNet"
version = "0.1.1"
description = "SCNet music separation, but easier to install and integrate."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
dependencies = [
  "accelerate",
  "einops",
  "julius",
  "ml_collections>=0.1.1",
  "numpy>=2.0.0",
  "ruamel-yaml",
  "soundfile",
  "torch>=2.0.0, <3.0.0",
  "torchaudio>=2.0.0, <3.0.0",
  "tqdm"
]

[project.urls]
homepage = "https://github.com/hunterhogan/hhSCNet"
repository = "https://github.com/hunterhogan/hhSCNet.git"

[project.scripts]
hhSCNet = "hhSCNet:main"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "pytest-mock"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
data_file = "tests/coverage/.coverage"
omit = ["hhSCNet/__init__.py", "tests/*"]

[tool.coverage.paths]
source = ["hhSCNet"]

[tool.pytest]
addopts = ["--color=yes"]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
